--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,26 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
+<ion-content  [fullscreen]="true">
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <div class="container bg-image no-scroll">
 
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
+    <img src="../../assets/icon/logo.png" alt="logo" class="center-image" style="width: max-content;">
+
+    <h1 class="title">
+      Bienvenido a
+      <br>
+      <span class="text-danger">
+        Coffee Check
+      </span>
+    </h1>
+
+    <p class="description">
+      Aplicación móvil con IA para identificar y caracterizar enfermedades en la planta del café.
+    </p>
+
+    <ion-button (click)="aceptar()" expand="block" class="accept-button">
+      Empezar
+      <ion-icon name="arrow-forward-outline"></ion-icon>
+    </ion-button>
+    
   </div>
+
 </ion-content>
