--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,27 +1,65 @@
-#container {
-  text-align: center;
+ion-content {
+  --background: #e9e9e8;
+  /* Ajusta el color de fondo según tus necesidades */
+  display: flex;
 
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
+  height: 100vh;
+  /* Asegura que el contenido ocupe toda la pantalla */
 }
 
-#container strong {
-  font-size: 20px;
-  line-height: 26px;
+.bg-image{
+  background-image: url("../../assets/images/background.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+
 }
 
-#container p {
-  font-size: 16px;
-  line-height: 22px;
-
-  color: #8c8c8c;
-
-  margin: 0;
+.no-scroll{
+  overflow: hidden;
 }
 
-#container a {
-  text-decoration: none;
+.container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 100vh;
+}
+
+.center-image {
+  width: auto;
+  height: 40%;
+  object-fit: cover;
+  margin-bottom: 20px;
+  padding: 0 10%;
+}
+
+.title {
+  font-size: 2em;
+  font-weight: 750;
+  padding: 0 10%;
+  margin-bottom: 15px;
+  color: #305810;
+}
+
+.text-danger{
+  color: #c51624;
+  font-size: 40px;
+}
+
+.description {
+  font-size: 1em;
+  padding: 0 10%;
+  color: #305810;
+}
+
+.accept-button {
+  --background: #305810;
+  --color: #e9e9e8;
+  width: 50%;
+  padding-left: 10%;
+  margin-top: 30px;
+  height: 45px;
+  --border-radius: 15px;
+  font-size: 15px;
 }
