MOD: datasheet styles

--- a/src/app/menu/menu.page.html
+++ b/src/app/menu/menu.page.html
@@ -5,16 +5,16 @@
     <ion-row class="tagline">
       <ion-col class="ion-margin">
         <ion-label>
-          <h1 style="font-size: 20px; font-weight: 600;">
-            Hola, 
+          <h1 class="title">
+            Bienvenido a
             <br>
-            <span class="text-red">Bienvenido</span>
+            <span class="text-red">Coffee Check</span>
           </h1>
         </ion-label>
       </ion-col>
     </ion-row>
 
-    <div class="video-container">
+    <div class="image-container">
       <img src="../../assets/images/imagen.png" alt="">
     </div>
 
@@ -25,8 +25,11 @@
           <ion-col size="6" class="card-lg-1">
             <ion-card (click)="navigateIA()" class="green-light">
               <ion-card-header>
-                <ion-icon name="aperture" class="card-icon"></ion-icon>
-                <ion-card-title>Caracterizar con IA</ion-card-title>
+                <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" viewBox="0 0 256 256" enable-background="new 0 0 256 256" xml:space="preserve">
+                  <metadata> Svg Vector Icons : http://www.onlinewebfonts.com/icon </metadata>
+                  <g><g><g><path fill="#ffffff" d="M101.6,25.1c-9.4,1.6-16.6,6.3-21.9,13.9c-1.2,1.8-4.1,6.7-6.4,10.7c-8.5,15.3-10.2,17.6-13.9,18.6c-1,0.3-6.2,0.5-12,0.5c-11.8,0-15.5,0.6-20.6,3C18.4,76,12.6,83.4,10.7,92.6c-0.6,3.1-0.7,10-0.7,57.3c0,35.3,0.2,54.9,0.5,56.8c1.4,9,7.8,17.3,16.3,21.5c6.6,3.2,0.4,3,103,2.9l92.4-0.1l3.3-1.2c10.6-3.9,17.5-11.8,19.7-22.2c0.6-3.1,0.7-10,0.7-57.2c0-36-0.2-54.5-0.5-56.4c-0.3-1.5-1.3-4.5-2.4-6.6c-1.5-3-2.6-4.7-5.6-7.7c-6.7-6.7-14.5-10.2-23.9-10.7c-6-0.3-8.5,0.4-10.5,3c-1.6,2.1-1.8,6.2-0.3,8.2c1.8,2.4,3.1,3,7.1,3.5c4.5,0.4,6.2,0.9,10.3,3.1c3.9,2,7.7,5.7,9.4,9.2l1.3,2.7l0.1,50.9c0.1,50.6,0.1,50.9-0.8,54c-1.8,5.5-6.3,10.1-11.8,11.9l-2.9,1H128c-86,0-87.6,0-90.4-0.9c-5.5-1.7-10.3-6.5-11.9-12c-0.9-3-0.9-4.1-0.8-54.4L25,97.7l1.7-3.5c2.1-4.2,4.7-6.8,9-8.8l3.1-1.5l13.4-0.2l13.4-0.2l2.9-1.5c1.6-0.9,3.2-2,3.7-2.5c0.5-0.6,4.4-7,8.6-14.3c4.1-7.3,8.4-14.4,9.5-15.8c3.6-4.7,8.9-7.9,15.1-9.2c4.6-1,40-1,44.6,0c6.4,1.3,12.7,5.4,16.1,10.3c1.4,2,4.4,3.7,6.6,3.7c2.1,0,5.2-1.8,6.2-3.7c1.4-2.6,1.2-5.3-0.8-8.6c-4-6.7-8.5-11-14.2-13.8c-6.7-3.2-6-3.1-34.3-3.3C115.3,24.8,102.8,24.9,101.6,25.1z"/><path fill="#ffffff" d="M184,62.4c-2.8,1.3-4.1,3.4-4.1,6.6c0,4.4,2.7,7.1,7.1,7.1s7.1-2.7,7.1-7.1c0-3.1-1.2-5.2-3.9-6.5C188,61.3,186.4,61.3,184,62.4z"/><path fill="#ffffff" d="M120.4,84.2c-7.7,1.1-15.9,3.9-22.4,7.8c-5.3,3.1-8,5.3-12.6,10.1c-10.1,10.5-16,24.5-16.1,38.4c0,4.3,0.1,5.1,0.9,6.2c3.2,4.3,8.9,4.5,12,0.3c1.1-1.3,1.2-2.3,1.6-6.4c0.7-8.8,2.9-15.4,7.3-22.1c13.1-19.9,39.7-25.9,60-13.5c5.1,3.1,11.5,9.5,14.6,14.6c12.4,20.3,6.5,46.9-13.5,60c-6.7,4.4-13.3,6.6-22.1,7.3c-4.3,0.3-5,0.5-6.5,1.7c-4.1,3.1-3.9,8.8,0.4,11.9c1.1,0.8,1.9,1,5.9,0.9c14.7-0.1,28.5-6.1,39.5-17.2c11.7-11.6,17.2-25.1,17.2-41.5c0-16.5-5.5-29.9-17.2-41.5c-8.7-8.7-18.2-13.8-30.2-16.3C134.8,83.9,124.8,83.6,120.4,84.2z"/><path fill="#ffffff" d="M84.3,165.6c-4.7,2.3-5.7,8.2-1.9,11.8c3.1,3,7.1,2.9,10.1-0.1c2.8-2.8,3-6.4,0.7-9.5C91.1,165,87.3,164.1,84.3,165.6z"/></g></g></g>
+                  </svg>
+                <ion-card-title>Identificar con IA</ion-card-title>
               </ion-card-header>
             </ion-card>
           </ion-col>
@@ -34,8 +37,11 @@
           <ion-col size="6" class="card-sm-1">
             <ion-card (click)="navigateDataSheet()" class="green-light">
               <ion-card-header>
-                <ion-icon name="images" class="card-icon"></ion-icon>
-                <ion-card-title>Fichas Técnicas</ion-card-title>
+                <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" viewBox="0 0 256 256" enable-background="new 0 0 256 256" xml:space="preserve">
+                  <metadata> Svg Vector Icons : http://www.onlinewebfonts.com/icon </metadata>
+                  <g><g><path fill="#ffffff" d="M30.9,207.1c-6,0-10.8-5-10.8-11.1V32c0-6.2,4.8-11.1,10.8-11.1H190c6,0,10.8,5,10.8,11.1v123.3h10V27.8c0-9.5-7.5-17.3-16.8-17.3H26.8c-9.3,0-16.8,7.8-16.8,17.3v172.4c0,9.5,7.5,17.3,16.8,17.3h123.8v-10.4H30.9L30.9,207.1z"/><path fill="#ffffff" d="M152.3,217.4l58.6-57.2v-12.8l-71.8,70H152.3L152.3,217.4z"/><path fill="#ffffff" d="M228.6,37.3h-20.1v10.4h15.8c6.2,0,11.2,5,11.2,11.2v165c0,6.2-5,11.2-11.2,11.2h-165c-6.2,0-11.2-5-11.2-11.2v-10.8H37.8v15.1c0,9.6,7.8,17.4,17.4,17.4h173.5c9.6,0,17.4-7.8,17.4-17.4V54.7C246,45.1,238.2,37.3,228.6,37.3L228.6,37.3z"/><path fill="#ffffff" d="M204,151.3h-65.5v66.1h9v-56.8H204L204,151.3L204,151.3z"/><path fill="#ffffff" d="M65.5,62.9h81.8v10.4H65.5V62.9L65.5,62.9z"/><path fill="#ffffff" d="M65.5,104h81.8v10.4H65.5V104L65.5,104z"/><path fill="#ffffff" d="M65.8,145.2h44.6v10.4H65.8V145.2z"/></g></g>
+                  </svg>
+                <ion-card-title>Registros</ion-card-title>
               </ion-card-header>
             </ion-card>
           </ion-col>
@@ -46,7 +52,10 @@
           <ion-col size="6" class="card-sm-2">
             <ion-card (click)="navigateValidation()" class="green-light">
               <ion-card-header>
-                <ion-icon name="cog" class="card-icon"></ion-icon>
+                <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" viewBox="0 0 256 256" enable-background="new 0 0 256 256" xml:space="preserve">
+                  <metadata> Svg Vector Icons : http://www.onlinewebfonts.com/icon </metadata>
+                  <g><g><g><path fill="#ffffff" d="M22.8,23c-2.5,0.6-7,3.3-8.4,5c-0.7,0.9-2,2.8-2.7,4.3l-1.4,2.7L10.1,110c-0.2,83.7-0.4,77.9,3.5,83c1.3,1.7,3.1,3.2,5.4,4.4l3.4,1.9l55.7,0.2l55.7,0.1l1.3,2.5c2.2,4.3,6.7,10.3,10.9,14.3c22,21.6,56.4,22.5,79.9,2.2c10.3-8.9,17.6-22.5,19.7-36.7c2-13.8-1.6-28.7-9.9-40.9c-4.7-7-13.5-14.9-20.8-18.7l-2.5-1.3L212.2,78l-0.2-43l-1.4-2.7c-2.1-4-3.7-5.6-7.4-7.6l-3.3-1.8l-87.7-0.1C63.9,22.7,23.7,22.8,22.8,23z M199.5,32c1.7,0.8,2.5,1.5,3.3,3.3c0.9,2.1,1.1,3.5,1.1,15.8v13.6h-92.7H18.4V51.1c0-12.3,0.1-13.8,1.1-15.8c0.8-1.7,1.5-2.5,3.3-3.3c2.2-1,4.2-1.1,88.4-1.1C195.3,31,197.3,31,199.5,32z M203.9,95.5v22.4l-1.2-0.5c-0.7-0.3-3.7-0.9-6.7-1.4c-6-1-14.4-0.9-20.2,0.3l-3.1,0.6L159,103.4l-13.6-13.6l-3,3.1l-3.1,3l12.1,12.1c6.6,6.6,12,12.2,11.9,12.3c-0.2,0.2-1.9,1.1-4,2.1c-15.7,7.9-27.6,24.4-30.6,42.6c-1.3,8-0.7,18.8,1.3,24.8l0.5,1.5H77.8c-51.2,0-52.8-0.1-55.1-1.1c-1.7-0.8-2.5-1.5-3.3-3.3c-1-2.2-1.1-4-1.1-58V73.1h92.7h92.7L203.9,95.5L203.9,95.5z M198.5,125c9.4,2.3,16.9,6.5,24,13.7c7.2,7.2,11.4,14.5,13.8,24.3c1.3,5,1.3,17.5,0,22.5c-2.4,9.7-6.6,17.1-13.8,24.3c-7.2,7.2-14.5,11.4-24.3,13.8c-5,1.3-17.5,1.3-22.5,0c-9.7-2.4-17.1-6.6-24.3-13.8s-11.4-14.5-13.8-24.3c-1.3-5-1.3-17.5,0-22.5c2.4-9.4,6.7-17.2,13.5-24.1c7.7-7.9,16.3-12.4,27-14.5C182.9,123.6,193.8,123.9,198.5,125z"/><path fill="#ffffff" d="M31.8,40.2c-5.3,2.3-6.6,9.4-2.4,13.5c5.9,6,15.6,0.6,14.1-7.7C42.5,41.1,36.6,38.1,31.8,40.2z"/><path fill="#ffffff" d="M65.5,40.2c-5.3,2.3-6.6,9.4-2.4,13.5c5.9,6,15.6,0.6,14.1-7.7C76.2,41.1,70.3,38.1,65.5,40.2z"/><path fill="#ffffff" d="M99.3,40.2c-5.3,2.3-6.6,9.4-2.4,13.5c5.9,6,15.6,0.6,14.1-7.7C110,41.1,104,38.1,99.3,40.2z"/><path fill="#ffffff" d="M119.6,83.5c-0.3,1.1-6.1,22.8-13,48.3c-6.8,25.4-12.4,46.6-12.4,46.9c0,0.7,7.2,2.7,7.7,2.2c0.4-0.3,26-95.6,26-96.6c0-0.3-1.4-1-3-1.5c-1.7-0.5-3.5-0.9-4-1.1C120.3,81.6,120,82,119.6,83.5z"/><path fill="#ffffff" d="M55.9,110.7l-20.7,20.7l21,21l20.9,20.9l2.9-2.9l2.9-2.9L65,149.5l-17.9-17.9L65,113.7l17.9-17.9L80,92.9c-1.6-1.6-3-2.9-3.2-2.9C76.7,90,67.3,99.3,55.9,110.7z"/><path fill="#ffffff" d="M193.7,169.9l-15.2,15.2l-6.7-6.7c-3.7-3.7-7-6.7-7.3-6.7c-0.6,0-5.5,4.8-5.5,5.5c0,0.3,4.4,4.9,9.7,10.3l9.7,9.7l18.2-18.2c10-10,18.2-18.4,18.2-18.7c0-0.5-5.3-5.6-5.8-5.6C209,154.8,202.1,161.6,193.7,169.9z"/></g></g></g>
+                  </svg>
                 <ion-card-title>Validaciones</ion-card-title>
               </ion-card-header>
             </ion-card>
@@ -55,8 +64,11 @@
           <ion-col size="6" class="card-lg-2">
             <ion-card (click)="navigateRecomendations()" class="green-light">
               <ion-card-header>
-                <ion-icon name="git-compare" class="card-icon"></ion-icon>
-                <ion-card-title>Recomendaciones</ion-card-title>
+                <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" viewBox="0 0 256 256" enable-background="new 0 0 256 256" xml:space="preserve">
+                  <metadata> Svg Vector Icons : http://www.onlinewebfonts.com/icon </metadata>
+                  <g><g><g><path fill="#ffffff" d="M23.9,25.4c-3.3,1.2-7.7,4.1-9.7,6.6c-0.9,1-2.2,3.2-2.9,4.8L10,39.7v67.1V174l1.6,3.3c2,4,6,8,10.1,9.9l2.9,1.4l57.7,0.2l57.7,0.1l0.3,1.9c2.6,16.2,10.7,28.1,23.9,35.2c7.8,4.2,15.2,5.9,24,5.4c11.8-0.6,21.2-4.8,29.8-13.4c7.7-7.7,12-16.4,13.3-26.7c0.4-2.7,0.5-2.8,2.2-3.4c4.6-1.4,10.1-7.2,11.7-12.6c1-3.2,1-4.5,0.9-69.4l-0.2-66.1l-1.6-3.4c-2-4.3-5.6-7.8-10.1-10l-3.4-1.7l-102.1-0.1C30.9,24.5,26.5,24.5,23.9,25.4z M233.2,30.5c3,1.6,5.3,3.9,6.9,6.9l1.2,2.3l0.2,66.4c0.2,74.2,0.4,69-3.5,73.4c-1.7,1.9-5.1,4.3-6.2,4.3c-0.2,0-0.3-0.8-0.3-1.7s-0.4-3.3-0.8-5.3c-3.6-17.1-16.9-30.9-34.2-35.5c-4.3-1.1-13-1.5-17.6-0.8c-14.2,2.3-26.9,11.5-33.5,24.2c-3.2,6.2-5.4,13.6-5.4,18.5v1.7l-56.9-0.2l-57-0.2l-2.8-1.3c-3.7-1.8-5.5-3.4-7.3-6.6l-1.5-2.7l-0.2-66.3c-0.2-74.2-0.4-69,3.5-73.5c1.9-2.2,4.7-4,7.4-4.8c0.7-0.2,47.2-0.4,103.3-0.3l102.1,0.1L233.2,30.5z M196.8,146.1c11.6,3.2,20.8,10.9,25.9,21.4c3,6.2,3.8,9.5,4.1,17.1c0.2,5.5,0.1,7.2-0.8,10.9c-3.7,15.4-15.2,26.9-30.6,30.6c-3.7,0.9-5.5,1-11.2,0.9c-5.9-0.2-7.4-0.5-11.6-1.9c-10.8-3.6-18.9-10.7-24-21c-4.8-9.5-5.3-22.6-1.4-33.2c4.9-13.1,16.8-22.9,30.8-25.5C183.3,144.3,191.8,144.7,196.8,146.1z"/><path fill="#ffffff" d="M34,43.3c-2.9,1.4-4.9,3.7-5.9,6.6c-1,2.9-1,22.2,0.1,24.6c1.3,3.1,3.3,5.2,6,6.5c2.5,1.2,3,1.2,13.5,1.2c12.1,0,12.9-0.2,16.2-3.1c3.5-3.1,3.8-4.2,3.8-17c0-12.8-0.3-14.1-4.1-17.3c-3-2.6-4.7-2.9-16.4-2.9C36.8,42,36.5,42,34,43.3z M61.3,48.6l1.7,1.9v11.3c0,16.6,0.8,15.8-15.8,15.8H35.9L34,76l-1.9-1.7L32,62.8c-0.2-11.3-0.2-11.5,1-13.2c2-3,2.5-3.1,15.1-2.9l11.5,0.2L61.3,48.6z"/><path fill="#ffffff" d="M190.7,43.3c-12.8,2.7-20.6,9.3-20.6,17.4c0,5.4,3.5,10.1,10.5,13.7c5.7,3,10.2,4,18.4,4c6.2,0,7.5-0.2,11.6-1.4c5.6-1.7,8.7-3.4,12.2-6.5c3.2-2.9,4.7-5.5,5-9.1c0.8-7.1-6.4-14.2-17.4-17.3C205.5,42.6,195.5,42.2,190.7,43.3z M208.7,48c12,2.9,17.6,10.3,13.2,17.2c-3.8,6-13.9,9.5-25.6,8.8c-8-0.5-14.2-2.6-18.3-6.2c-2.3-2.1-3-3.1-3.5-5.7c-1.4-5.9,5.4-12.2,15.2-14.3C194.7,46.7,203.8,46.8,208.7,48z"/><path fill="#ffffff" d="M28.5,105.5c-0.5,0.5-0.6,3.4-0.6,10.3c0,8.1,0.2,9.8,0.8,10.5c0.7,0.7,3.1,0.8,19,0.8c13.8,0,18.4-0.2,19.1-0.7c0.7-0.5,0.9-1.9,0.9-10.3c0-6.9-0.2-9.9-0.6-10.5c-0.6-0.6-3.6-0.7-19.3-0.7C33.9,104.9,28.9,105,28.5,105.5z M63,115.7v6.8H47.7H32.4v-6.8v-6.8h15.3H63V115.7z"/><path fill="#ffffff" d="M81.5,105.2c-0.2,0.2-0.4,4.9-0.4,10.5c0,9.6,0.1,10.3,1,10.8c0.7,0.3,7.5,0.5,18.8,0.5c15.3,0,18-0.1,18.9-0.8c1.1-0.8,1.1-1,1.1-10.5c0-6.8-0.2-9.8-0.6-10.3c-0.5-0.5-5.5-0.6-19.5-0.6C90.3,104.9,81.6,105,81.5,105.2z M116.3,115.7v6.8l-15.4-0.1l-15.5-0.2l-0.2-6c0-3.3,0-6.3,0.1-6.7c0.2-0.5,3.4-0.7,15.6-0.7h15.3L116.3,115.7L116.3,115.7z"/><path fill="#ffffff" d="M135,105.5c-0.5,0.5-0.6,3.4-0.6,10.3c0,9.5,0.1,9.7,1.1,10.5c1,0.7,3.6,0.8,19,0.8c13.5,0,18.1-0.2,18.8-0.7c0.7-0.5,0.9-1.9,0.9-10.5c0.1-5.4-0.1-10.1-0.3-10.4C173.5,104.6,135.8,104.7,135,105.5z M169.9,115.7v6.5l-15.4,0.2l-15.5,0.1V116c0-3.6,0.2-6.6,0.4-6.8c0.2-0.2,7.1-0.3,15.4-0.3l15.1,0.2V115.7z"/><path fill="#ffffff" d="M188.5,105.7c-0.2,0.5-0.3,5.2-0.3,10.5c0,9.3,0.1,9.8,1,10.3c0.7,0.4,7,0.5,19.4,0.4c15.7-0.2,18.5-0.3,18.9-0.9c0.8-1.2,0.7-19.8-0.1-20.5c-0.5-0.5-5.5-0.6-19.6-0.6C191,104.9,188.8,105,188.5,105.7z M223.4,115.7v6.8h-15.3h-15.3v-6.8v-6.8h15.3h15.3V115.7z"/><path fill="#ffffff" d="M28.5,140.7c-0.8,0.8-0.8,2.6,0,3.3c0.9,0.9,109.1,0.9,109.9,0c0.8-0.8,0.8-2.6,0-3.3C137.5,139.8,29.3,139.8,28.5,140.7z"/><path fill="#ffffff" d="M28.5,158.8c-0.8,0.8-0.8,2.6,0,3.3c0.5,0.5,9.5,0.6,37.5,0.6c35.9,0,36.9,0,37.4-1c0.7-1.4,0.7-1.9-0.3-2.8c-0.7-0.7-4.8-0.8-37.4-0.8C37.9,158.2,28.9,158.3,28.5,158.8z"/><path fill="#ffffff" d="M172.5,168.6c-9.4,9.4-11.9,12.2-11.9,13.2c0,1,1.2,2.4,4.5,5.6c2.5,2.4,4.8,4.4,5.3,4.4c0.5,0,2.4-1.5,4.3-3.4l3.5-3.3v14.6c0,14,0,14.7,1,15.2c1.3,0.7,11.9,0.7,13.2,0c0.9-0.5,1-1.2,1-15.1c0-8,0.2-14.6,0.4-14.6s1.9,1.5,3.7,3.3c2.6,2.5,3.6,3.3,4.3,3c1.3-0.4,9.7-9,9.7-9.9c0-0.4-5.5-6.1-12.2-12.9c-9.5-9.6-12.5-12.2-13.5-12.2C184.7,156.6,181.8,159.3,172.5,168.6z M195.8,172l9.8,9.8l-2.2,2.3l-2.2,2.3l-4.6-4.5c-2.5-2.5-4.9-4.5-5.3-4.5c-1.8,0-2,1.1-2.1,17.4l-0.2,16l-3.1,0.2l-3.2,0.2v-16.1c0-13.9-0.1-16.2-0.8-16.8c-0.4-0.5-1.2-0.8-1.6-0.8c-0.5,0-2.9,2.1-5.4,4.5l-4.6,4.5l-2.2-2.3l-2.2-2.3l9.8-9.8c5.4-5.4,9.9-9.8,10.1-9.8C185.9,162.2,190.4,166.6,195.8,172z"/></g></g></g>
+                  </svg>
+                <ion-card-title>Indicaciones</ion-card-title>
               </ion-card-header>
             </ion-card>
           </ion-col>
