--- a/src/app/fichas/fichas.page.scss
+++ b/src/app/fichas/fichas.page.scss
@@ -2,28 +2,40 @@ ion-content {
     // --background: #e9e9e8;
     /* Ajusta el color de fondo según tus necesidades */
     display: flex;
-  
+
     height: 100vh;
     /* Asegura que el contenido ocupe toda la pantalla */
-  }
+}
 
-  .container {
+.container {
     display: flex;
     flex-direction: column;
     justify-content: center;
     height: 100vh;
-  }
-
-.bg-image {
-    background-image: url("../../assets/images/background.png");
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
+    background-color: #ffffff;
 }
 
-.no-scroll {
-    overflow: hidden;
+.logo-img {
+    width: 60px;
+    padding: .5rem;
+    border-radius: 50%;
 }
+
+.icon-back{
+    color: #ffffff;
+    background-color: #e74c63;
+    padding: 8px;
+    border-radius: 50%;
+}
+
+.icon-info{
+    margin-right: 10px;
+    color: #809e59;
+    font-size: 30px;
+    padding: 8px;
+    border-radius: 50%;
+}
+
 
 .text-red {
     color: #e74c63;
@@ -31,7 +43,7 @@ ion-content {
     font-weight: 700;
 }
 
-.tagline{
+.tagline {
     margin-bottom: -5px;
 }
 
@@ -62,61 +74,45 @@ ion-content {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 20px;
-}
-
-ion-row {
-    margin-bottom: 15px;
 }
 
 ion-card {
+    background-color: #ffffff;
+    margin-bottom: -2px;
+    border-radius: 10px;
+}
+
+.image-col {
     display: flex;
-    justify-content: center;
     align-items: center;
-    text-align: center;
+    justify-content: center;
+}
+
+.responsive-img {
+    width: 100%;
     height: 100%;
-    cursor: pointer;
-    border-radius: 20px;
+    object-fit: cover;
+    border-radius: 8px;
 }
 
-.card-lg-1{
-    height: 11rem;
+ion-card-title {
+    color: #193105;
+    font-weight: 700;
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 5px;
 }
 
-.card-lg-2{
-    height: 11rem;
-    margin-top: -50px;
+ion-badge{
+    background-color: #e74c63;
+    color: #fff;
 }
 
-.card-sm-1{
-    height: 8rem;
-}
-.card-sm-2{
-    height: 8rem;
+ion-card-content p {
+    color: #193105;
+
 }
 
 .green-light {
     background-color: #809e59;
-}
-
-.card-icon {
-    font-size: 3em;
-    margin-bottom: 10px;
-    color: #fefeff;
-}
-
-ion-card-header {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: #fefeff;
-}
-
-ion-card-header svg {
-    width: 50px;
-}
-
-ion-card-title {
-    font-size: 15px;
-    color: #fefeff;
 }
