--- a/src/app/menu/menu.page.html
+++ b/src/app/menu/menu.page.html
@@ -23,7 +23,7 @@
         <ion-row>
 
           <ion-col size="6" class="card-lg-1">
-            <ion-card (click)="navigateIA()" class="green-light">
+            <ion-card (click)="navigateIA()" class="green-light bg-image-card">
               <ion-card-header>
                 <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" viewBox="0 0 256 256" enable-background="new 0 0 256 256" xml:space="preserve">
                   <metadata> Svg Vector Icons : http://www.onlinewebfonts.com/icon </metadata>
@@ -35,7 +35,7 @@
           </ion-col>
 
           <ion-col size="6" class="card-sm-1">
-            <ion-card (click)="navigateDataSheet()" class="green-light">
+            <ion-card (click)="navigateDataSheet()" class="bg-image-card green-light">
               <ion-card-header>
                 <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" viewBox="0 0 256 256" enable-background="new 0 0 256 256" xml:space="preserve">
                   <metadata> Svg Vector Icons : http://www.onlinewebfonts.com/icon </metadata>
@@ -50,7 +50,7 @@
         <ion-row>
 
           <ion-col size="6" class="card-sm-2">
-            <ion-card (click)="navigateValidation()" class="green-light">
+            <ion-card (click)="navigateValidation()" class="bg-image-card green-light">
               <ion-card-header>
                 <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" viewBox="0 0 256 256" enable-background="new 0 0 256 256" xml:space="preserve">
                   <metadata> Svg Vector Icons : http://www.onlinewebfonts.com/icon </metadata>
@@ -62,7 +62,7 @@
           </ion-col>
 
           <ion-col size="6" class="card-lg-2">
-            <ion-card (click)="navigateRecomendations()" class="green-light">
+            <ion-card (click)="navigateRecomendations()" class="bg-image-card green-light">
               <ion-card-header>
                 <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" viewBox="0 0 256 256" enable-background="new 0 0 256 256" xml:space="preserve">
                   <metadata> Svg Vector Icons : http://www.onlinewebfonts.com/icon </metadata>
