--- a/src/app/ficha-tecnica/ficha-tecnica.page.scss
+++ b/src/app/ficha-tecnica/ficha-tecnica.page.scss
@@ -9,21 +9,58 @@ ion-content {
     --background: #ffffff;
 }
 
-ion-slides {
+/* ion-slides {
     height: 40vh;
-}
+} */
 
-ion-slide img {
+/* ion-slide img {
     width: 100%;
     height: 40%;
     object-fit: cover;
     margin: 20px;
+} */
+
+.image-container {
+    position: relative;
+    height: 400px;
+    margin: 10px;
+    border-radius: 15px;
+    background-position: center;
+    background-repeat: no-repeat;
+    overflow: hidden;
+}
+
+.swiper-slide-custom {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: auto;
+}
+
+.swiper-slide-custom img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    display: block;
+}
+
+.title-image {
+    position: absolute;
+    bottom: -10px;
+    color: #ffffff;
+    font-size: 35px;
+    font-weight: 700;
+    z-index: 1990;
+    background-color: #3332328f;
+    padding: 10px;
+    // border-radius: 15px;
+    width: 100%;
 }
 
 
-.icon-back{
+.icon-back {
     color: #ffffff;
-    background-color: #e74c63;
+    background-color: #809e59;
     padding: 8px;
     border-radius: 50%;
 }
@@ -71,11 +108,11 @@ ion-list {
     justify-content: space-between;
 }
 
-.bg-cyan {
-    background-color: #305810;
-    height: 30px;
+.bg-red {
+    --border-color: #809e59;
+    background-color: #ffffff;
     padding: 4px;
-    color: #e9e9e8;
+    color: #809e59;
     display: inline-flex;
     align-items: center;
     justify-content: center;
@@ -84,7 +121,6 @@ ion-list {
 .text-badge {
     font-weight: 500;
     font-size: 15px;
-    margin: 10px;
     display: inline-block;
 }
 
@@ -97,7 +133,7 @@ ion-list {
 }
 
 .d-description {
-    padding: 20px;
+    padding: 15px;
     background-color: #f5f8f2;
     height: auto;
     border-radius: 15px;
@@ -106,10 +142,10 @@ ion-list {
 .name-description {
     font-size: 20px;
     font-weight: 700;
-    color: #c51624;
+    color: #809e59;
     margin-bottom: -20px;
 }
 
 ul li {
-    color: #c51624;
+    color: #809e59;
 }
