--- a/src/app/fichas/fichas.page.html
+++ b/src/app/fichas/fichas.page.html
@@ -1,4 +1,4 @@
-<ion-header [translucent]="false" class="ion-no-border">
+<ion-header class="ion-no-border">
   <ion-toolbar>
 
     <ion-buttons slot="start">
